--- a/ODK.Deploy/ODK.Deploy.Web.Mvc/Views/Home/Index.cshtml
+++ b/ODK.Deploy/ODK.Deploy.Web.Mvc/Views/Home/Index.cshtml
@@ -21,32 +21,32 @@
             <tr>
                 <td>@deployment.Name</td>
                 <td>
-                    <a href="@Url.Action("Index", null, new { path = deployment.RemotePath })">@deployment.RemotePath</a>
+                    <a href="@Url.Action("Index", null, new { deploymentId = deployment.Id, path = deployment.RemotePath })">@deployment.RemotePath</a>
                 </td>
                 <td>
                     @if (!string.IsNullOrEmpty(deployment.LastBackup))
                     {
-                        <a href="@Url.Action("Index", null, new { path = deployment.LastBackup })">@deployment.LastBackup</a>
+                        <a href="@Url.Action("Index", null, new { deploymentId = deployment.Id, path = deployment.LastBackup })">@deployment.LastBackup</a>
                     }
                 </td>
                 <td>
                     @if (!string.IsNullOrEmpty(deployment.LastUpload))
                     {
-                        <a href="@Url.Action("Index", null, new { path = deployment.LastUpload })">@deployment.LastUpload</a>
+                        <a href="@Url.Action("Index", null, new { deployment = deployment.Id, path = deployment.LastUpload })">@deployment.LastUpload</a>
                     }
                 </td>
                 <td>
                     <div class="d-flex">
                         @using (Html.BeginForm("Backup", null, FormMethod.Post))
                         {
-                            <input type="hidden" name="id" value="@deployment.Id" />
+                            <input type="hidden" name="deploymentId" value="@deployment.Id" />
                             <input type="hidden" name="path" value="@Model.Path" />
                             <button class="btn btn-sm btn-primary">Backup</button>
                         }
 
                         @using (Html.BeginForm("Upload", null, FormMethod.Post))
                         {
-                            <input type="hidden" name="id" value="@deployment.Id" />
+                            <input type="hidden" name="deploymentId" value="@deployment.Id" />
                             <input type="hidden" name="path" value="@Model.Path" />
                             <button class="btn btn-sm btn-primary">Upload</button>
                         }
@@ -54,7 +54,7 @@
 
                         @using (Html.BeginForm("Release", null, FormMethod.Post))
                         {
-                            <input type="hidden" name="id" value="@deployment.Id" />
+                            <input type="hidden" name="deploymentId" value="@deployment.Id" />
                             <input type="hidden" name="path" value="@Model.Path" />
                             <button class="btn btn-sm btn-primary" disabled="@(string.IsNullOrEmpty(deployment.LastUpload) ? "disabled" : null)">
                                 Release
@@ -67,7 +67,7 @@
                             {
                                 using (Html.BeginForm("Online", null, FormMethod.Post))
                                 {
-                                    <input type="hidden" name="id" value="@deployment.Id" />
+                                    <input type="hidden" name="deploymentId" value="@deployment.Id" />
                                     <input type="hidden" name="path" value="@Model.Path" />
                                     <button class="btn btn-sm btn-success">Put online</button>
                                 }
@@ -76,7 +76,7 @@
                             {
                                 using (Html.BeginForm("Offline", null, FormMethod.Post))
                                 {
-                                    <input type="hidden" name="id" value="@deployment.Id" />
+                                    <input type="hidden" name="deploymentId" value="@deployment.Id" />
                                     <input type="hidden" name="path" value="@Model.Path" />
                                     <button class="btn btn-sm btn-danger">Take offline</button>
                                 }
@@ -99,7 +99,7 @@
             {
                 var ancestor = Model.Folder.Ancestors.ElementAt(i);
                 <li class="breadcrumb-item">
-                    <a href="@Url.Action("Index", null, new { path = ancestor.Path })">
+                    <a href="@Url.Action("Index", null, new { deploymentId = Model.DeploymentId, path = ancestor.Path })">
                         @(i == 0 ? "Root" : ancestor.Name)
                     </a>
                 </li>
@@ -122,6 +122,7 @@
                     {
                         @using (Html.BeginForm("Delete", null, FormMethod.Post))
                         {
+                            <input type="hidden" name="deploymentId", value="@Model.DeploymentId"/>
                             <input type="hidden" name="path" value="@folder.Path" />
                             <input type="hidden" name="parent" value="@Model.Path" />
                             <button class="btn btn-default text-danger">&times;</button>
@@ -129,7 +130,7 @@
                     }
                 </td>
                 <td>
-                    @Html.ActionLink(folder.Name, "Index", null, new { path = folder.Path, }, new { @class = "d-block" })
+                    @Html.ActionLink(folder.Name, "Index", null, new { deploymentId = Model.DeploymentId, path = folder.Path, }, new { @class = "d-block" })
                 </td>
                 <td></td>
             </tr>
