--- a/ODK.Deploy/ODK.Deploy.Web.Mvc/Views/Home/Server.cshtml
+++ b/ODK.Deploy/ODK.Deploy.Web.Mvc/Views/Home/Server.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Deploy.Web.Mvc.Models.Home;
+@using ODK.Deploy.Web.Mvc.Requests.Home;
 @model ServerViewModel
 @{
     ViewData["Title"] = "Deploy";
@@ -20,50 +21,51 @@
     <tbody>
         @foreach (var deployment in Model.Deployments)
         {
+            DeploymentRequest deploymentRequest = new DeploymentRequest
+            {
+                DeploymentId = deployment.Id,
+                Name = Model.Name,
+                Path = Model.Path
+            };
+
             <tr>
                 <td>@deployment.Name</td>
                 <td>
-                    @Html.ActionLink(deployment.RemotePath, "Server", null, new { Model.Name, path = deployment.RemotePath })
+                    @Html.ActionLink(deployment.RemotePath, "Server", null,
+                        new ServerPathRequest { Name = Model.Name, Path = deployment.RemotePath })
                 </td>
                 <td>
                     @if (!string.IsNullOrEmpty(deployment.LastBackup))
                     {
-                        @Html.ActionLink(deployment.LastBackup, "Server", null, new { Model.Name, path = deployment.LastBackup })
+                        @Html.ActionLink(deployment.LastBackup, "Server", null,
+                            new ServerPathRequest { Name = Model.Name, Path = deployment.LastBackup })
                     }
                 </td>
                 <td>
                     @if (!string.IsNullOrEmpty(deployment.LastUpload))
                     {
-                        @Html.ActionLink(deployment.LastUpload, "Server", null, new { Model.Name, path = deployment.LastUpload })
+                        @Html.ActionLink(deployment.LastUpload, "Server", null,
+                            new ServerPathRequest { Name = Model.Name, Path = deployment.LastUpload })
                     }
                 </td>
                 <td>
                     <div class="d-flex">
-                        @using (Html.BeginForm("Backup", null, FormMethod.Post))
+                        @using (Html.BeginForm("Backup", null, deploymentRequest, FormMethod.Post))
                         {
-                            <input type="hidden" name="name" value="@Model.Name" />
-                            <input type="hidden" name="name" value="@deployment.Id" />
-                            <input type="hidden" name="path" value="@Model.Path" />
                             <button class="btn btn-sm btn-primary" disabled="@(string.IsNullOrEmpty(Model.BackupPath) ? "disabled" : null)">
                                 Backup
                             </button>
                         }
 
-                        @using (Html.BeginForm("Upload", null, FormMethod.Post))
+                        @using (Html.BeginForm("Upload", null, deploymentRequest, FormMethod.Post))
                         {
-                            <input type="hidden" name="name" value="@Model.Name" />
-                            <input type="hidden" name="deploymentId" value="@deployment.Id" />
-                            <input type="hidden" name="path" value="@Model.Path" />
-                            <button class="btn btn-sm btn-primary" disabled="@(string.IsNullOrEmpty(Model.DeployPath) ? "disabled" : null)">
+                            <button class="btn btn-sm btn-primary" disabled="@(string.IsNullOrEmpty(Model.DeployPath) || string.IsNullOrEmpty(deployment.BuildPath) ? "disabled" : null)">
                                 Upload
                             </button>
                         }
 
-                        @using (Html.BeginForm("Release", null, FormMethod.Post))
+                        @using (Html.BeginForm("Release", null, deploymentRequest, FormMethod.Post))
                         {
-                            <input type="hidden" name="name" value="@Model.Name" />
-                            <input type="hidden" name="deploymentId" value="@deployment.Id" />
-                            <input type="hidden" name="path" value="@Model.Path" />
                             <button class="btn btn-sm btn-primary" disabled="@(string.IsNullOrEmpty(deployment.LastUpload) ? "disabled" : null)">
                                 Release
                             </button>
@@ -71,21 +73,15 @@
 
                         @if (deployment.Offline == true)
                         {
-                            using (Html.BeginForm("Online", null, FormMethod.Post))
+                            using (Html.BeginForm("Online", null, deploymentRequest, FormMethod.Post))
                             {
-                                <input type="hidden" name="name" value="@Model.Name" />
-                                <input type="hidden" name="deploymentId" value="@deployment.Id" />
-                                <input type="hidden" name="path" value="@Model.Path" />
                                 <button class="btn btn-sm btn-success">Put online</button>
                             }
                         }
                         else if (deployment.Offline == false)
                         {
-                            using (Html.BeginForm("Offline", null, FormMethod.Post))
+                            using (Html.BeginForm("Offline", null, deploymentRequest, FormMethod.Post))
                             {
-                                <input type="hidden" name="name" value="@Model.Name" />
-                                <input type="hidden" name="deploymentId" value="@deployment.Id" />
-                                <input type="hidden" name="path" value="@Model.Path" />
                                 <button class="btn btn-sm btn-danger">Take offline</button>
                             }
                         }
@@ -106,7 +102,7 @@
             {
                 var ancestor = Model.Folder.Ancestors.ElementAt(i);
                 <li class="breadcrumb-item">
-                    <a href="@Url.Action("Server", null, new { Model.Name, path = ancestor.Path })">
+                    <a href="@Url.Action("Server", null, new ServerPathRequest { Name = Model.Name, Path = ancestor.Path })">
                         @(i == 0 ? "Root" : ancestor.Name)
                     </a>
                 </li>
@@ -127,21 +123,19 @@
                 <td>
                     @if (Model.CanDeleteChildren)
                     {
-                        @using (Html.BeginForm("Delete", null, FormMethod.Post))
+                        @using (Html.BeginForm("Delete", null, new ServerPathRequest { Name = Model.Name, Path = folder.Path }, FormMethod.Post))
                         {
-                            <input type="hidden" name="name", value="@Model.Name"/>
-                            <input type="hidden" name="path" value="@folder.Path" />
-                            <input type="hidden" name="parent" value="@Model.Path" />
                             <button class="btn btn-default text-danger">&times;</button>
                         }
                     }
                 </td>
                 <td>
-                    @Html.ActionLink(folder.Name, "Server", null, new { name = Model.Name, path = folder.Path, }, new { @class = "d-block" })
+                    @Html.ActionLink(folder.Name, "Server", null, new ServerPathRequest { Name = Model.Name, Path = folder.Path, }, new { @class = "d-block" })
                 </td>
                 <td></td>
             </tr>
         }
+
         @foreach (var file in Model.Folder.Files)
         {
             <tr>
