--- a/ODK.Deploy/ODK.Deploy.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/ODK.Deploy/ODK.Deploy.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ODK Deploy</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
