(media admin): add crude read-only media listing page

--- a/ODK.Website.Angular/src/app/modules/admin/components/structure/admin-menu/admin-menu.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/structure/admin-menu/admin-menu.component.html
@@ -1,1 +1,1 @@
-<app-navbar [menuItems]="menuItems" breakpoint="sm"></app-navbar>
+<app-navbar [menuItems]="menuItems" breakpoint="sm" [fluid]="true"></app-navbar>
