--- a/ODK.Website.Angular/src/app/modules/shared/components/elements/navbar/navbar.component.html
+++ b/ODK.Website.Angular/src/app/modules/shared/components/elements/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="groups">
   <nav class="navbar navbar-dark bg-dark" 
       [class.navbar-expand-sm]="breakpoint === 'sm'" [class.navbar-expand-lg]="breakpoint === 'lg'">
-    <div class="container position-relative nav-container">
+    <div class="position-relative nav-container" [class.container]="!fluid" [class.container-fluid]="fluid">
       <button class="navbar-toggler" type="button" (click)="collapsed = !collapsed">
         <span class="navbar-toggler-icon"></span>
       </button>
