--- a/ODK.Website.Angular/src/app/modules/admin/components/media/media-files/media-files.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/media/media-files/media-files.component.html
@@ -1,8 +1,21 @@
 <h2>Media</h2>
-<div *appLoading="!files" class="row row-cols-6">
-  <div *ngFor="let file of files">
-    <a [attr.href]="file.url" target="_blank">
-      <img [attr.src]="file.url" [style.max-width.px]="100" />
-    </a>
+<ng-container *appLoading="!files">
+  <input type="file" accept="image/*" #file placeholder="Choose file" class="d-none"
+      (change)="onFileUpload(file.files)" />
+  <p>
+    <button class="btn btn-primary" type="button" (click)="file.click()">Upload image</button>
+  </p>
+
+  <div class="row row-cols-6">
+    <div *ngFor="let file of files" class="position-relative d-flex justify-content-center">
+      <button class="btn-icon btn-overlay text-danger" ngbTooltip="Delete" (click)="onFileDelete(file)">
+        <i class="fas fa-times-circle"></i>
+      </button>
+      <button class="btn-icon" [ngbTooltip]="file.name" (click)="onFileClick(file)" type="button">
+        <img [attr.src]="file.url" [style.max-width.px]="100" />
+      </button>
+    </div>
   </div>
-</div>
+  
+  <app-media-file [file]="selectedFile" (close)="onFileClose()"></app-media-file>
+</ng-container>
