--- a/ODK.Website.Angular/src/css/_buttons.scss
+++ b/ODK.Website.Angular/src/css/_buttons.scss
@@ -10,7 +10,15 @@
 }
 
 .btn-overlay {
-  position: absolute;
+  position: absolute;  
+}
+
+.btn-overlay--top-right {
   top: 0;
+  right: 0;
+}
+
+.btn-overlay--bottom-right {
+  bottom: 0;
   right: 0;
 }
