--- a/ODK.Website.Angular/src/css/_buttons.scss
+++ b/ODK.Website.Angular/src/css/_buttons.scss
@@ -15,10 +15,10 @@
 
 .btn-overlay--top-right {
   top: 0;
-  right: 0;
+  right: 10px;
 }
 
 .btn-overlay--bottom-right {
   bottom: 0;
-  right: 0;
+  right: 10px;
 }
