--- a/ODK.Website.Angular/src/app/modules/admin/components/media/media-file/media-file.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/media/media-file/media-file.component.html
@@ -1,5 +1,11 @@
 <app-modal *ngIf="file" [title]="file.name" [fullWidth]="true" (close)="onClose()">
   <p>
+    {{file.url}}
+  </p>
+  <p>
+    {{file.createdDate | date:'yyyy-MM-dd HH:mm:ss' }}
+  </p>
+  <p>
     <img [attr.src]="file.url" />
   </p>
 </app-modal>
