--- a/ODK.Website.Angular/src/app/modules/admin/components/forms/inputs/html-editor-form-control/html-editor-form-control.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/forms/inputs/html-editor-form-control/html-editor-form-control.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="formGroup" class="form-control form-control-custom" 
   [class.is-invalid]="isInvalid" [class.is-valid]="isValid">
   <ckeditor *ngIf="!sourceMode" [editor]="Editor" [id]="viewModel.id" [formControlName]="viewModel.id" [required]="required"
-    (change)="onChange()">
+    (ready)="onReady($event)" (change)="onChange()">
   </ckeditor>  
 
   <textarea *ngIf="sourceMode" [attr.rows]="15"
