(admin): add html editor note for image text workaround

--- a/ODK.Website.Angular/src/app/modules/admin/components/forms/inputs/html-editor-form-control/html-editor-form-control.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/forms/inputs/html-editor-form-control/html-editor-form-control.component.html
@@ -15,5 +15,8 @@
     <button class="btn btn-link" type="button" (click)="onToggleMode()">
       {{sourceMode ? 'Hide source' : 'View source'}}
     </button>
+    <span class="text-muted small">
+      If adding an image, write text first to make life easier for yourself
+    </span>
   </div>
 </div>
