--- a/ODK.Website.Angular/src/app/modules/admin/components/subscriptions/subscriptions/subscriptions.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/subscriptions/subscriptions/subscriptions.component.html
@@ -28,4 +28,4 @@
 </table>
 
 <h3>Membership settings</h3>
-<app-chapter-membership-settings></app-chapter-membership-settings>
+<app-membership-settings></app-membership-settings>
