--- a/ODK.Website.Angular/src/app/modules/admin/components/subscriptions/subscription-create/subscription-create.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/subscriptions/subscription-create/subscription-create.component.html
@@ -1,4 +1,4 @@
 <app-breadcrumbs [breadcrumbs]="breadcrumbs" active="Create new subscription"></app-breadcrumbs>
-<app-chapter-subscription-form [formCallback]="formCallback" 
+<app-subscription-form [formCallback]="formCallback"
   (formSubmit)="onFormSubmit($event)">
-</app-chapter-subscription-form>
+</app-subscription-form>
