Finish menu refactor

--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-header/event-header.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-header/event-header.component.html
@@ -2,7 +2,7 @@
   <h5>{{event.date | date:'fullDate'}}</h5>
   <h5 *ngIf="venue" class="d-flex justify-content-between">
     <a [routerLink]="links.venue">{{venue.name}}</a>
-    <a [routerLink]="links.live">View in site</a>
+    <a [routerLink]="links.live"><i class="fas fa-home"></i></a>
   </h5>  
 
   <div class="mt-3">
