--- a/ODK.Website.Angular/src/app/modules/admin/components/emails/default-emails/default-emails.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/emails/default-emails/default-emails.component.html
@@ -1,6 +1,14 @@
-<ng-container *appLoading="!viewModels">
-  <div *ngFor="let viewModel of viewModels" class="mb-5">
-    <app-form [form]="viewModel.form" (formSubmit)="onFormSubmit(viewModel.email)">
-    </app-form>
-  </div>  
-</ng-container>
+<table *appLoading="!emails" class="table table-striped">
+  <thead>
+    <tr>
+      <th>Email</th>      
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let email of emails">
+      <td>
+        <a [routerLink]="getEmailLink(email)">{{email.name}}</a>
+      </td>
+    </tr>
+  </tbody>
+</table>
