(style): remove border radius, alter primary and success tones

--- a/ODK.Website.Angular/src/app/components/account/profile/profile.component.html
+++ b/ODK.Website.Angular/src/app/components/account/profile/profile.component.html
@@ -1,6 +1,6 @@
 <app-body>
   <ng-container *appLoading="!profile">
-    <ngb-alert *ngIf="successMessage" type="success">
+    <ngb-alert *ngIf="successMessage" type="success" (close)="onAlertClose()">
       {{successMessage}}
     </ngb-alert>
     
