--- a/ODK.Website.Angular/src/css/_stripe.scss
+++ b/ODK.Website.Angular/src/css/_stripe.scss
@@ -6,7 +6,7 @@
     padding: 10px 12px;
   
     border: 1px solid transparent;
-    border-radius: 4px;
+    border-radius: $border-radius;
     background-color: white;
   
     box-shadow: 0 1px 3px 0 #e6ebf1;
