--- a/ODK.Website.Angular/src/css/bootstrap/_variables.scss
+++ b/ODK.Website.Angular/src/css/bootstrap/_variables.scss
@@ -1,1 +1,8 @@
+$border-radius:               0 !default;
+$border-radius-lg:            0 !default;
+$border-radius-sm:            0 !default;
+
+$primary: #2370c1;
+$success: #3aa051;
+
 $enable-validation-icons: false;
