--- a/ODK.Website.Angular/src/css/_members.scss
+++ b/ODK.Website.Angular/src/css/_members.scss
@@ -6,7 +6,7 @@
   
   .card-img-top {
     background-color: #eee;
-    border-radius: calc($border-radius - 1px);
+    border-radius: $border-radius;
     max-height: 150px;
     width: inherit;
   }
