--- a/ODK.Website.Angular/src/app/modules/admin/components/members/member-filter/member-filter.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/members/member-filter/member-filter.component.html
@@ -1,3 +1,2 @@
-<ng-container *ngIf="viewModel">
-  <app-form [form]="form" (formChange)="onFormChange()" (formSubmit)="onFormSubmit()"></app-form>
-</ng-container>
+<app-form *ngIf="viewModel" [form]="form" (formChange)="onFormChange()" (formSubmit)="onFormSubmit()">
+</app-form>
