(Payments): add PayPal

--- a/ODK.Website.Angular/src/app/modules/account/components/purchase-subscription/purchase-subscription.component.html
+++ b/ODK.Website.Angular/src/app/modules/account/components/purchase-subscription/purchase-subscription.component.html
@@ -6,7 +6,9 @@
         <app-raw-html [html]="chapterSubscription.description"></app-raw-html>
       </div>
       <div>
-        <app-payment-button [payment]="payment" [close]="close" (cardSubmit)="onCardSubmit($event)"></app-payment-button>
+        <app-payment-button [payment]="payment" [title]="title" [close]="close"
+          (cardSubmit)="onCardSubmit($event)">
+        </app-payment-button>
       </div>
     </div>
   </div>
