--- a/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Admin/Events/_CreateEventContent.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Admin/Events/_CreateEventContent.cshtml
@@ -14,7 +14,7 @@
 <form method="post" action="/@Model.Name/Admin/Events/Create">
     @Html.AntiForgeryToken()
     
-    @await Html.PartialAsync("Admin/Events/_CreateEventForm", new CreateEventFormViewModel
+    @await Html.PartialAsync("Admin/Events/_EventForm", new AdminEventFormViewModel
     {
         ChapterId = Model.Id,
         CurrentMemberId = memberId.Value,
