--- a/ODK.Website.Api/ODK.Web.Razor/wwwroot/css/_tables.scss
+++ b/ODK.Website.Api/ODK.Web.Razor/wwwroot/css/_tables.scss
@@ -21,3 +21,7 @@ th.sortable {
         content: ' \f0d7'; // caret-down
     }
 }
+
+.table-stripe > * {
+    background-color: var(--bs-table-striped-bg) !important;
+}
