--- a/ODK.Website.Api/ODK.Web.Razor/wwwroot/css/_tables.scss
+++ b/ODK.Website.Api/ODK.Web.Razor/wwwroot/css/_tables.scss
@@ -25,3 +25,9 @@ th.sortable {
 .table-stripe > * {
     background-color: var(--bs-table-striped-bg) !important;
 }
+
+/*Restore Bootstrap 4 thead style*/
+.table thead th {
+    border-top: 1px solid var(--bs-table-border-color);
+    border-bottom: 2px solid var(--bs-table-border-color);
+}
