--- a/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberForm.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberForm.cshtml
@@ -3,7 +3,9 @@
 
 <div class="form-group mb-3">
     @Html.LabelFor(x => x.Name, new { @class = "form-label" })
-    @Html.TextBoxFor(x => x.Name, new { @class = "form-control-plaintext" })
+    <div class="form-control-plaintext">
+        @Model.Name
+    </div>
 </div>
 
 <div class="form-group mb-3">
