--- a/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Header/_AdminHeader.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Header/_AdminHeader.cshtml
@@ -1,6 +1,21 @@
 ﻿@using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Header
 @model ODK.Web.Razor.Models.Header.AdminHeaderViewModel
+@{
+    List<MenuItem> menuItems = new List<MenuItem>
+    {
+        new() { Link = $"/{Model.Chapter.Name}", Icon = "fas fa-home", Text = "" },
+        new() { Link = $"/{Model.Chapter.Name}/Admin/Chapter/Text", Text = Model.Chapter.Name },
+        new() { Link = $"/{Model.Chapter.Name}/Admin/Events", Text = "Events" },
+        new() { Link = $"/{Model.Chapter.Name}/Admin/Members", Text = "Members" }
+        // new() { Link = $"/{Model.Chapter.Name}/Admin/Media", Text = "Media" }
+    };
+
+    if (User.IsInRole("SuperAdmin"))
+    {
+        menuItems.Add(new MenuItem { Link = $"/{Model.Chapter.Name}/Admin/SuperAdmin/PaymentSettings", Text = "SuperAdmin" });
+    }
+}
 
 @await Html.PartialAsync("Header/_Navbar", new NavbarViewModel
 {
@@ -9,13 +24,6 @@
     Member = Model.CurrentMember,
     MenuItems = new []
     {
-        new []
-        {
-            new MenuItem { Link = $"/{Model.Chapter.Name}", Icon = "fas fa-home", Text = "" },
-            new MenuItem { Link = $"/{Model.Chapter.Name}/Admin/Chapter/Text", Text = Model.Chapter.Name },
-            new MenuItem { Link = $"/{Model.Chapter.Name}/Admin/Events", Text = "Events" },
-            new MenuItem { Link = $"/{Model.Chapter.Name}/Admin/Members", Text = "Members" }
-            // new MenuItem { Link = $"/{Model.Chapter.Name}/Admin/Media", Text = "Media" }
-        }
+        menuItems.ToArray()
     }
 })
