--- a/ODK.Website.Api/ODK.Web.Razor/Pages/Account/Login.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Pages/Account/Login.cshtml
@@ -3,7 +3,7 @@
 @using ODK.Web.Razor.Models.Login
 @model LoginModel
 @{
-    Layout = "Shared/_HomeLayout.cshtml";
+    Layout = "../Shared/_HomeLayout";
     Model.Title = "Login";
 }
 
