--- a/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Account/_LoginForm.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Account/_LoginForm.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ODK.Web.Razor.Models.Login.LoginViewModel
 
+
 <form method="post" action="/Account/Login?ReturnUrl=@Model.ReturnUrl">
     @Html.AntiForgeryToken()
 
@@ -11,6 +12,9 @@
         @Html.LabelFor(x => x.Password, new { @class = "form-label" })
         @Html.PasswordFor(x => x.Password, new { @class = "form-control" })
     </div>
-
-    <button type="submit" class="btn btn-primary">Sign in</button>
+    
+    <div class="d-flex">
+        <button type="submit" class="btn btn-primary me-auto">Sign in</button>
+        <a class="btn btn-link" href="/@(Model.Chapter != null ? $"{Model.Chapter.Name}/" : null)Account/Password/Forgotten">Forgotten password?</a>
+    </div>
 </form>
