--- a/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Events/_ListEvent.cshtml
+++ b/ODK.Website.Api/ODK.Web.Razor/Views/Shared/Events/_ListEvent.cshtml
@@ -2,14 +2,27 @@
 @using ODK.Web.Razor.Models.Events
 @model ListEventViewModel
 
-<h3 class="d-flex align-items-center">  
+<h4 class="d-flex align-items-center">  
     @await Html.PartialAsync("Events/_EventResponseIcon", new EventResponseIconViewModel
-    {
-        ReadOnly = true,
-        ResponseType = Model.EventResponse.Response
-    })
+           {
+               ReadOnly = true,
+               ResponseType = Model.EventResponse.Response
+           })
     
-    <a href="/@Model.Chapter.Name/Events/@Model.EventResponse.EventId" class="@(Model.EventResponse.Response > 0 ? "ml-1" : null)">@Model.EventResponse.EventName</a>
-</h3>
-<h4>@Model.EventResponse.Date.EventDate(true)</h4>
+    @if (Model.EventResponse.Public)
+    {
+        <a href="/@Model.Chapter.Name/Events/Public/@Model.EventResponse.EventId" class="@(Model.EventResponse.Response > 0 ? "ml-1" : null)">
+            @Model.EventResponse.EventName [Public event]
+        </a>
+    }
+    else
+    {
+        <a href="/@Model.Chapter.Name/Events/@Model.EventResponse.EventId" class="@(Model.EventResponse.Response > 0 ? "ml-1" : null)">
+            @Model.EventResponse.EventName
+        </a>   
+    }
+</h4>
+<h5>
+    @Model.EventResponse.Date.EventDate(true)
+</h5>
 <div>@Model.EventResponse.VenueName</div>
